--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -9,3 +9,8 @@ dependencies = [
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
 ]
+
+[dependency-groups]
+dev = [
+    "django-extensions>=4.1",
+]
