--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "django>=5.2.7",
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
+    "gunicorn>=23.0.0",
+    "python-dotenv>=1.2.1",
 ]
 
 [dependency-groups]
