chore(web): configurar organização automática de imports no Biome
- Adiciona configuração de organizeImports com grupos personalizados
- Define ordem de imports: NODE → PACKAGE → ALIAS → relativos
- Agrupa imports de utils, api e components separadamente
- Usa ordenação natural (identifierOrder: natural)
- Melhora legibilidade e padronização do código

--- a/apps/web/biome.json
+++ b/apps/web/biome.json
@@ -20,7 +20,28 @@
 		"enabled": true,
 		"indentStyle": "tab"
 	},
-	"assist": { "actions": { "source": { "organizeImports": "on" } } },
+	"assist": {
+		"actions": {
+			"source": {
+				"organizeImports": {
+					"level": "on",
+					"options": {
+						"groups": [
+							":NODE:",
+							":PACKAGE:",
+							":ALIAS:",
+							"../**",
+							"./",
+							"@/utils/**",
+							"@/api/**",
+							"@/components/**"
+						],
+						"identifierOrder": "natural"
+					}
+				}
+			}
+		}
+	},
 	"linter": {
 		"enabled": true,
 		"rules": {
