feat(api): otimizar Dockerfile com gunicorn e collectstatic para produção
- Adiciona uv sync --frozen para instalação determinística
- Instala gunicorn para servir aplicação em produção
- Executa collectstatic durante build
- Substitui runserver por gunicorn no comando principal
- Migra automaticamente banco de dados no startup

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -5,13 +5,16 @@ WORKDIR /app
 RUN pip install uv
 
 COPY pyproject.toml uv.lock .
+RUN uv sync --frozen
 
-RUN uv sync
-
-ENV PATH="/venv/bin:$PATH"
+RUN uv add gunicorn
 
 COPY . .
 
+RUN uv run manage.py collectstatic --noinput || true
+
+ENV PATH="/venv/bin:$PATH"
+
 EXPOSE 8000
 
-CMD ["uv", "run", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD sh -c "uv run manage.py migrate && uv run gunicorn core.wsgi:application --bind 0.0.0.0:8000"
