--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,20 @@ services:
       context: ./apps/api
       dockerfile: Dockerfile
     command: >
-      sh -c "uv run manage.py migrate &&
-             uv run manage.py runserver 0.0.0.0:8000"
+      sh -c "uv run manage.py migrate;
+        uv run gunicorn core.wsgi:application --bind 0.0.0.0:8000"
     ports:
       - "${API_PORT}:8000"
     environment:
+      - API_PORT=${API_PORT:-8000}
+      - DJANGO_PRODUCTION=True
       - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
-      - DJANGO_CORS_ALLOWED_ORIGINS=${DJANGO_CORS_ALLOWED_ORIGINS}
-      - DJANGO_DEBUG=${DJANGO_DEBUG-False}
+      - DJANGO_CORS_ALLOWED_ORIGINS=${DJANGO_CORS_ALLOWED_ORIGINS:-http://localhost:3000}
+      - DJANGO_DEBUG=${DJANGO_DEBUG:-False}
+      - DJANGO_ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS:-*}
     volumes:
       - db_data:/app/db
+    restart: unless-stopped
 
   web:
     build:
@@ -22,9 +26,12 @@ services:
       args:
         - VITE_APP_URL_API=${API_URL}
     ports:
-      - "${WEB_PORT}:3000"
+      - "${WEB_PORT}:80"
+    environment:
+      - WEB_PORT=${WEB_PORT:-3000}
     depends_on:
       - api
+    restart: unless-stopped
 
 volumes:
   db_data:
